[tool.poetry]
name = "hot-cold-simulation"
version = "0.1.0"
description = ""
authors = ["JRickey <jack.rickey99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
matplotlib = "^3.8.0"
geopandas = "0.14.0"
psycopg2 = "2.9.9"
plotly = "5.17.0"
numpy = "1.26.0"
pandas = "2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
